Committed all changes so far (last commit only added files in their initial format without content as they were auto-added by the IDE on creation)
